# ars-ui

./: .crap-baseline.json  .editorconfig  .gitignore  .mcp.json  .taplo.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml  rustfmt.toml
crates/ars-a11y/: Cargo.toml
crates/ars-a11y/src/: announcements.rs  announcer.rs  focus.rs  label.rs  lib.rs  touch.rs  visually_hidden.rs
crates/ars-collections/: Cargo.toml
crates/ars-collections/src/: announcements.rs  async_collection.rs  async_loader.rs  builder.rs  collection.rs  dnd.rs  filtered_collection.rs  key.rs  lib.rs  mutable.rs  navigation.rs  node.rs  selection.rs  sorted_collection.rs  static_collection.rs  tree_collection.rs  typeahead.rs  virtual_layout.rs  virtualization.rs
crates/ars-collections/tests/: serde.rs  tab_key_derive.rs
crates/ars-components/: Cargo.toml
crates/ars-components/proptest-regressions/: state-machines.txt
crates/ars-components/src/: lib.rs
crates/ars-components/tests/: data_display_meter_stat_progress.rs  proptest_state_machines.rs  spec_conformance.rs
crates/ars-core/: Cargo.toml  ars-base.css
crates/ars-core/src/: callback.rs  color.rs  companion_css.rs  component_ids.rs  connect.rs  error.rs  i18n_registry.rs  input_mode.rs  lib.rs  message_fn.rs  modality.rs  platform.rs  provider.rs  raster.rs  shared_flag.rs  shared_ptr.rs  shared_state.rs  test_helpers.rs  url.rs  weak_send.rs  z_index.rs
crates/ars-core/tests/: bindable_contract.rs  component_error.rs  derive_contract.rs  proptest_attr_map.rs  proptest_color.rs  reexport_contract.rs  snapshot_smoke.rs
crates/ars-derive/: Cargo.toml
crates/ars-derive/src/: component_part.rs  has_id.rs  lib.rs  translate.rs
crates/ars-dioxus/: Cargo.toml
crates/ars-dioxus-components/: Cargo.toml
crates/ars-dioxus-components/src/: lib.rs  prelude.rs
crates/ars-dioxus-components/tests/: checkbox.rs  tabs.rs
crates/ars-dioxus/src/: as_child.rs  attrs.rs  callbacks.rs  dismissable.rs  ephemeral.rs  error_boundary.rs  event_mapping.rs  hydration.rs  id.rs  lib.rs  nonce.rs  platform.rs  prelude.rs  provider.rs  safe_listener.rs  use_machine.rs
crates/ars-dioxus/tests/: ars_provider.rs  ars_provider_wasm.rs  as_child.rs  attr_passthrough.rs  axe.rs  button.rs  button_wasm.rs  checkbox.rs  checkbox_wasm.rs  client_only.rs  client_only_wasm.rs  desktop_dismissable.rs  desktop_error_boundary.rs  desktop_platform.rs  error_boundary.rs  field.rs  fieldset.rs  form.rs  separator_wasm.rs  tab_key_reexport.rs  tabs.rs  tabs_wasm.rs  test_checkbox.rs  test_field_wasm.rs  test_fieldset_wasm.rs  test_form_wasm.rs  test_heading.rs  test_heading_wasm.rs  test_highlight.rs  test_highlight_wasm.rs  test_landmark.rs  test_landmark_wasm.rs  test_separator.rs  visually_hidden.rs  visually_hidden_wasm.rs  z_index_allocator.rs
crates/ars-dom/: Cargo.toml
crates/ars-dom/src/: announcer.rs  debug.rs  focus.rs  lib.rs  media.rs  modality.rs  outside_interaction.rs  overlay_stack.rs  platform.rs  portal.rs  scroll.rs  scroll_lock.rs  signature_raster.rs  url.rs  z_index.rs
crates/ars-dom/tests/: focus_public_api.rs  z_index_compat.rs
crates/ars-e2e/: Cargo.toml
crates/ars-e2e/src/: assertions.rs  axe.rs  browser.rs  desktop.rs  error.rs  fixtures.rs  lib.rs  main.rs  widgets.rs
crates/ars-forms/: Cargo.toml
crates/ars-forms/src/: field_component.rs  fieldset.rs  form_messages.rs  form_submit.rs  hidden_input.rs  lib.rs
crates/ars-i18n/: Cargo.toml
crates/ars-i18n/src/: bidi.rs  calendar.rs  case.rs  collation.rs  date.rs  detect.rs  layout.rs  lib.rs  locale.rs  locale_stack.rs  number.rs  plural.rs  provider.rs  relative_time.rs  text.rs  translate.rs  weekday.rs
crates/ars-i18n/tests/: translate_derive.rs
crates/ars-interactions/: Cargo.toml  ars-interactions.css
crates/ars-interactions/src/: companion_css.rs  compose.rs  direction.rs  dismissable.rs  drag_drop.rs  focus.rs  hover.rs  interact_outside.rs  keyboard.rs  lib.rs  long_press.rs  move_interaction.rs  press.rs
crates/ars-leptos/: Cargo.toml
crates/ars-leptos-components/: Cargo.toml
crates/ars-leptos-components/src/: lib.rs  prelude.rs
crates/ars-leptos-components/tests/: checkbox.rs  tabs.rs
crates/ars-leptos/src/: as_child.rs  attrs.rs  callbacks.rs  controlled.rs  dismissable.rs  ephemeral.rs  error_boundary.rs  event_mapping.rs  hydration.rs  id.rs  lib.rs  nonce.rs  prelude.rs  provider.rs  safe_listener.rs  use_machine.rs
crates/ars-leptos/tests/: ars_provider.rs  ars_provider_wasm.rs  as_child.rs  as_child_wasm.rs  attr_class_merge_probe.rs  attr_passthrough.rs  axe.rs  button.rs  button_wasm.rs  checkbox.rs  checkbox_wasm.rs  client_only.rs  client_only_wasm.rs  error_boundary.rs  field.rs  fieldset.rs  form.rs  separator.rs  tab_key_reexport.rs  tabs.rs  tabs_wasm.rs  test_checkbox.rs  test_field_wasm.rs  test_fieldset_wasm.rs  test_form_wasm.rs  test_heading.rs  test_heading_wasm.rs  test_highlight.rs  test_highlight_wasm.rs  test_landmark.rs  test_landmark_wasm.rs  test_separator_wasm.rs  visually_hidden.rs  visually_hidden_wasm.rs  z_index_allocator.rs
crates/ars-test-harness/: Cargo.toml
crates/ars-test-harness-dioxus/: Cargo.toml
crates/ars-test-harness-dioxus/src/: desktop.rs  lib.rs
crates/ars-test-harness-dioxus/tests/: desktop_smoke.rs
crates/ars-test-harness-leptos/: Cargo.toml
crates/ars-test-harness-leptos/src/: lib.rs
crates/ars-test-harness/src/: backend.rs  element.rs  item.rs  lib.rs  parity.rs  types.rs
examples/widgets-dioxus-css/: Cargo.toml  Dioxus.toml
examples/widgets-dioxus-css/public/: ars-base.css  style.css
examples/widgets-dioxus-css/src/: locale.rs  main.rs  (+2 more)
examples/widgets-dioxus-tailwind/: Cargo.toml  Dioxus.toml  tailwind.css
examples/widgets-leptos-tailwind/: Cargo.toml  Trunk.toml  index.html  tailwind.css
tools/spec-tool/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: adapter.rs  coverage.rs  crap.rs  e2e.rs  examples.rs  i18n.rs  lib.rs  lint.rs  main.rs  manifest.rs  mcp.rs  mutants.rs  test.rs  tool.rs
xtask/tests/: examples.rs  spec_corpus_compile_snippets.rs
(+4525 files in other folders)
