[workspace]
members  = ["tools/spec-tool"]
exclude  = ["crates/*"]        # TODO: replace with `members = ["crates/*", ...]` once first crate is added
resolver = "3"

[workspace.package]
edition      = "2024"
license      = "MIT OR Apache-2.0"
description  = "Framework-agnostic UI component library built on state machines"
repository   = "https://github.com/fogodev/ars-ui"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code                   = "forbid"
missing_debug_implementations = "warn"
unreachable_pub               = "warn"
unused_qualifications         = "warn"
unused_import_braces          = "warn"
let_underscore_drop           = "warn"

[workspace.lints.clippy]
# Correctness & safety
correctness = { level = "deny", priority = -1 }
suspicious  = { level = "deny", priority = -1 }
perf        = { level = "deny", priority = -1 }

# Style & clarity
style                              = { level = "warn", priority = -1 }
needless_pass_by_value             = "warn"
cloned_instead_of_copied           = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else                    = "warn"
uninlined_format_args              = "warn"
semicolon_if_nothing_returned      = "warn"
doc_markdown                       = "warn"
match_same_arms                    = "warn"
implicit_clone                     = "warn"
trivially_copy_pass_by_ref         = "warn"

# Pedantic picks (useful, not exhausting)
needless_continue        = "warn"
if_not_else              = "warn"
redundant_else           = "warn"
map_unwrap_or            = "warn"
ref_option               = "warn"
large_futures            = "warn"
cast_lossless            = "warn"
checked_conversions      = "warn"
missing_errors_doc       = "warn"
return_self_not_must_use = "warn"

# Restriction picks
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
