[workspace]
members = [
    "crates/ars-a11y",
    "crates/ars-components",
    "crates/ars-collections",
    "crates/ars-core",
    "crates/ars-derive",
    "crates/ars-dioxus",
    "crates/ars-dom",
    "crates/ars-forms",
    "crates/ars-i18n",
    "crates/ars-interactions",
    "crates/ars-leptos",
    "crates/ars-test-harness",
    "crates/ars-test-harness-dioxus",
    "crates/ars-test-harness-leptos",
    "xtask"
]
exclude = [
    "examples/widgets-leptos",
    "examples/widgets-dioxus",
    "examples/widgets-leptos-css",
    "examples/widgets-dioxus-css",
    "examples/widgets-leptos-tailwind",
    "examples/widgets-dioxus-tailwind",
]
resolver = "3"

[workspace.package]
edition      = "2024"
license      = "MIT OR Apache-2.0"
description  = "Framework-agnostic UI component library built on state machines"
repository   = "https://github.com/fogodev/ars-ui"
rust-version = "1.90"

[workspace.lints.rust]
unsafe_code                   = "forbid"
missing_debug_implementations = "warn"
missing_docs                  = "warn"
unreachable_pub               = "warn"
unused_qualifications         = "warn"
unused_import_braces          = "warn"
let_underscore_drop           = "warn"

[workspace.lints.clippy]
# Correctness & safety
correctness = { level = "deny", priority = -1 }
suspicious  = { level = "deny", priority = -1 }
perf        = { level = "deny", priority = -1 }

# Style & clarity
style                              = { level = "warn", priority = -1 }
needless_pass_by_value             = "warn"
cloned_instead_of_copied           = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else                    = "warn"
uninlined_format_args              = "warn"
semicolon_if_nothing_returned      = "warn"
doc_markdown                       = "warn"
match_same_arms                    = "warn"
implicit_clone                     = "warn"
trivially_copy_pass_by_ref         = "warn"

# Pedantic picks (useful, not exhausting)
needless_continue        = "warn"
if_not_else              = "warn"
redundant_else           = "warn"
map_unwrap_or            = "warn"
ref_option               = "warn"
large_futures            = "warn"
cast_lossless            = "warn"
checked_conversions      = "warn"
missing_errors_doc       = "warn"
return_self_not_must_use = "warn"

# Restriction picks
allow_attributes     = "warn"
clone_on_ref_ptr     = "warn"
missing_const_for_fn = "warn"

[profile.release]
lto           = true
codegen-units = 1
