[package]
name                   = "xtask"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "1"
regex      = "1"

# MCP support (feature-gated)
rmcp   = { version = "1.3", features = ["server", "transport-io"], optional = true }
tokio  = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
anyhow = { version = "1", optional = true }

[features]
default = ["mcp"]
mcp     = ["dep:rmcp", "dep:tokio", "dep:anyhow"]
