[package]
name                   = "ars-a11y"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default               = ["aria-drag-drop-compat"]
aria-drag-drop-compat = []
axe                   = []
testing               = []

[dependencies]
ars-core = { path = "../ars-core", default-features = false }

[lints]
workspace = true
