[package]
name                   = "ars-core"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default = ["std"]
std     = []
serde   = []
ssr     = []
debug   = []

[lints]
workspace = true
