[package]
name                   = "ars-core"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default      = ["std"]
std          = []
serde        = ["dep:serde"]
ssr          = []
debug        = []
embedded-css = []

[dependencies]
ars-i18n = { path = "../ars-i18n", default-features = false }
serde    = { version = "1", default-features = false, features = ["alloc", "derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
