[package]
name                   = "ars-core"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default      = ["std"]
std          = []
serde        = ["dep:serde"]
ssr          = []
debug        = ["dep:log"]
embedded-css = []

[dependencies]
ars-derive = { path = "../ars-derive" }
ars-i18n = { path = "../ars-i18n", default-features = false }
log      = { version = "0.4", default-features = false, optional = true }
serde    = { version = "1", default-features = false, features = ["alloc", "derive"], optional = true }

[dev-dependencies]
insta      = { version = "1", features = ["yaml"] }
proptest   = "1"
serde_json = "1"
trybuild   = "1"

[lints]
workspace = true
