[package]
name                   = "ars-derive"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
heck        = "0.5"
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full"] }

[lints]
workspace = true
