[package]
name                   = "ars-dioxus"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default     = []
debug       = ["dep:log", "ars-core/debug", "ars-interactions/debug", "ars-dom?/debug"]
web         = ["dioxus/web", "dep:ars-dom", "ars-dom/web", "dep:web-sys"]
desktop     = ["dioxus/desktop"]
desktop-dom = ["desktop", "dep:ars-dom"]
mobile      = ["dioxus/mobile"]
ssr         = ["dioxus/server", "dep:ars-dom", "ars-dom/ssr"]

[dependencies]
ars-a11y         = { path = "../ars-a11y" }
ars-collections  = { path = "../ars-collections" }
ars-core         = { path = "../ars-core" }
ars-dom          = { path = "../ars-dom", optional = true, default-features = false }
ars-forms        = { path = "../ars-forms" }
ars-i18n         = { path = "../ars-i18n" }
ars-interactions = { path = "../ars-interactions" }
log              = { version = "0.4", default-features = false, optional = true }

[dependencies.dioxus]
version          = "0.7"
default-features = false
features         = ["macro", "signals", "hooks", "html"]


[dependencies.web-sys]
version  = "0.3"
optional = true
features = ["console", "CssStyleDeclaration", "Document", "Element", "HtmlElement", "Window"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[lints]
workspace = true
