[package]
name                   = "ars-dioxus"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default = ["icu4x"]
debug = ["dep:log", "ars-core/debug", "ars-interactions/debug", "ars-dom?/debug"]
desktop = ["dioxus/desktop", "dep:arboard", "dep:uuid", "dep:rfd", "dep:log"]
desktop-dom = ["desktop", "dep:ars-dom"]
mobile = ["dioxus/mobile"]
ssr = [
  "dioxus/server",
  "dep:ars-dom",
  "ars-dom/ssr",
  "ars-core/ssr",
  "ars-core/serde",
  "dep:serde",
  "dep:serde_json"
]
web = [
  "dioxus/web",
  "dep:ars-dom",
  "ars-dom/web",
  "ars-core/ssr",
  "ars-core/serde",
  "dep:web-sys",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:js-sys"
]
# Pre-compiled CLDR data via ICU4X. Default backend on native targets and the
# server-side rendering path. Use `--no-default-features --features web,ars-i18n/web-intl`
# to swap icu4x for the browser-native Intl API on wasm32 builds.
icu4x = ["ars-i18n/std", "ars-i18n/icu4x"]

[dependencies]
ars-a11y             = { path = "../ars-a11y" }
ars-collections      = { path = "../ars-collections" }
ars-components       = { path = "../ars-components" }
ars-core             = { path = "../ars-core" }
ars-dom              = { path = "../ars-dom", optional = true, default-features = false }
ars-forms            = { path = "../ars-forms" }
ars-i18n             = { path = "../ars-i18n", default-features = false }
ars-interactions     = { path = "../ars-interactions" }
log                  = { version = "0.4", default-features = false, optional = true }
arboard              = { version = "3", optional = true }
uuid                 = { version = "1", default-features = false, features = ["v4"], optional = true }
rfd                  = { version = "0.17", optional = true }
js-sys               = { version = "0.3", optional = true }
wasm-bindgen         = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde                = { version = "1", default-features = false, features = ["alloc", "derive"], optional = true }
serde_json           = { version = "1", optional = true }

[dependencies.dioxus]
version          = "0.7"
default-features = false
features         = ["macro", "signals", "hooks", "html"]


[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "Clipboard",
  "console",
  "Crypto",
  "CssStyleDeclaration",
  "DataTransfer",
  "Document",
  "DomRect",
  "DragEvent",
  "Element",
  "Event",
  "EventTarget",
  "FocusEvent",
  "HtmlCollection",
  "HtmlElement",
  "KeyboardEvent",
  "MouseEvent",
  "Navigator",
  "Node",
  "NodeList",
  "Performance",
  "PointerEvent",
  "Window"
]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
dioxus-web           = { version = "0.7.6", default-features = false }
js-sys               = "0.3"
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test    = "0.3"
web-sys              = { version = "0.3", features = ["EventInit", "KeyboardEventInit", "PointerEventInit"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
ars-test-harness-dioxus = { path = "../ars-test-harness-dioxus" }
dioxus-ssr              = "0.7"
insta                   = { version = "1", features = ["yaml"] }

[lints]
workspace = true
