[package]
name                   = "ars-dom"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default = ["web"]
ssr     = []
web     = ["dep:js-sys", "dep:wasm-bindgen", "dep:web-sys"]

[dependencies]
ars-a11y         = { path = "../ars-a11y" }
ars-core         = { path = "../ars-core" }
ars-i18n         = { path = "../ars-i18n" }
ars-interactions = { path = "../ars-interactions" }
js-sys           = { version = "0.3", optional = true }
wasm-bindgen     = { version = "0.2", optional = true }
web-sys          = { version = "0.3", optional = true, features = [
    "CssStyleDeclaration",
    "DomRect",
    "Document",
    "Element",
    "EventTarget",
    "FocusEvent",
    "FocusOptions",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    "Navigator",
    "Node",
    "NodeList",
    "PointerEvent",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ScrollToOptions",
    "TouchEvent",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
