[package]
name                   = "ars-dom"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default = ["web"]
debug   = ["dep:log", "ars-core/debug", "ars-interactions/debug"]
ssr     = []
web     = ["dep:js-sys", "dep:wasm-bindgen", "dep:web-sys"]

[dependencies]
ars-a11y         = { path = "../ars-a11y" }
ars-core         = { path = "../ars-core" }
ars-i18n         = { path = "../ars-i18n" }
ars-interactions = { path = "../ars-interactions" }
js-sys           = { version = "0.3", optional = true }
log              = { version = "0.4", default-features = false, optional = true }
wasm-bindgen     = { version = "0.2", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "AddEventListenerOptions",
    "CharacterData",
    "CssStyleDeclaration",
    "DomMatrixReadOnly",
    "DomRect",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "FocusEvent",
    "FocusOptions",
    "HtmlCollection",
    "HtmlElement",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "HtmlSlotElement",
    "KeyboardEvent",
    "KeyboardEventInit",
    "MediaQueryList",
    "MouseEvent",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "Navigator",
    "Node",
    "NodeList",
    "Performance",
    "PointerEvent",
    "PointerEventInit",
    "ResizeObserver",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ScrollToOptions",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "TouchEvent",
    "Text",
    "VisualViewport",
    "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
