[package]
name                   = "ars-e2e"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
publish                = false

[lints]
workspace = true

[dependencies]
clap       = { version = "4", features = ["derive"] }
serde_json = "1"
thirtyfour = "0.37.0"
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
