[package]
name                   = "ars-forms"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default = []
serde   = []

[dependencies]
ars-collections = { path = "../ars-collections" }
ars-core        = { path = "../ars-core" }
ars-i18n        = { path = "../ars-i18n" }
indexmap        = "2"

[lints]
workspace = true
