[package]
name                   = "ars-forms"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default          = ["email-validation", "url-validation"]
email-validation = ["dep:addr-spec"]
url-validation   = ["dep:url"]
serde            = []

[dependencies]
ars-collections = { path = "../ars-collections" }
ars-core        = { path = "../ars-core" }
ars-i18n        = { path = "../ars-i18n" }
indexmap        = "2.14"
regex           = "1.12"
url             = { version = "2.5", optional = true }

[dependencies.addr-spec]
version  = "0.9.1"
optional = true
features = ["normalization", "comments", "white-spaces", "literals"]

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }

[lints]
workspace = true
