[package]
name                   = "ars-forms"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default = ["std", "email-validation", "url-validation"]
email-validation = ["dep:addr-spec"]
serde = []
std = [
    "ars-collections/std",
    "ars-core/std",
    "ars-i18n/std",
    "indexmap/std",
    "regex/std",
    "url?/std"
]
url-validation = ["dep:url"]

[dependencies]
ars-collections = { path = "../ars-collections", default-features = false }
ars-core        = { path = "../ars-core", default-features = false }
ars-i18n        = { path = "../ars-i18n", default-features = false }
hashbrown       = { version = "0.17", default-features = false, features = ["default-hasher"] }
indexmap        = { version = "2.14", default-features = false }
regex           = { version = "1.12", default-features = false }
url             = { version = "2.5", optional = true, default-features = false }

[dependencies.addr-spec]
version  = "0.9.1"
optional = true
features = ["normalization", "comments", "white-spaces", "literals"]

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }

[lints]
workspace = true
