[package]
name                   = "ars-i18n"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
fixed_decimal        = { version = "0.7", default-features = false, features = ["ryu"] }
icu                  = { version = "2.1", default-features = false }
icu_experimental     = { version = "0.5", default-features = false }
icu_provider         = { version = "2.1", default-features = false }
tinystr              = { version = "0.8", default-features = false }
unicode-segmentation = "1.13"

[features]
default             = ["std", "gregorian", "icu4x"]
std                 = []
gregorian           = []
buddhist            = []
japanese            = []
japanese-extended   = []
hebrew              = []
islamic             = []
islamic-civil       = []
islamic-umm-al-qura = []
persian             = []
ethiopic            = []
ethiopic-amete-alem = []
indian              = []
chinese             = []
coptic              = []
dangi               = []
roc                 = []
all-calendars       = []
icu4x               = ["icu/compiled_data", "icu_experimental/compiled_data"]
web-intl            = []

[lints]
workspace = true
