[package]
name                   = "ars-i18n"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
core_maths           = { version = "0.1", default-features = false }
fixed_decimal        = { version = "0.7", default-features = false, features = ["ryu"] }
icu                  = { version = "2.2", default-features = false }
icu_experimental     = { version = "0.5", default-features = false }
icu_provider         = { version = "2.2", default-features = false }
js-sys               = { version = "0.3", optional = true }
tinystr              = { version = "0.8", default-features = false }
unicode-segmentation = "1.13"
wasm-bindgen         = { version = "0.2", optional = true }

[features]
default             = ["std", "icu4x"]
std                 = []
icu4x               = ["icu/compiled_data", "icu_experimental/compiled_data"]
web-intl            = ["dep:js-sys", "dep:wasm-bindgen"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
