[package]
name                   = "ars-interactions"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default               = ["std", "aria-drag-drop-compat"]
std                   = ["ars-core/std", "ars-i18n/std"]
aria-drag-drop-compat = []
debug                 = ["dep:log", "ars-core/debug"]
embedded-css          = []
test-support          = []

[dependencies]
ars-a11y = { path = "../ars-a11y", default-features = false }
ars-core = { path = "../ars-core", default-features = false }
ars-i18n = { path = "../ars-i18n", default-features = false }
log      = { version = "0.4", default-features = false, optional = true }

[lints]
workspace = true
