[package]
name                   = "ars-leptos-components"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default = ["icu4x"]
ssr     = ["ars-leptos/ssr", "leptos/ssr"]
hydrate = ["ars-leptos/hydrate", "leptos/hydrate"]
csr     = ["ars-leptos/csr", "leptos/csr"]
icu4x   = ["ars-leptos/icu4x"]

[dependencies]
ars-forms  = { path = "../ars-forms" }
ars-leptos = { path = "../ars-leptos", default-features = false }
leptos     = { version = "0.8", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
insta = { version = "1", features = ["yaml"] }

[lints]
workspace = true
