[package]
name                   = "ars-leptos"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default = []
debug   = ["dep:log", "ars-core/debug", "ars-dom/debug", "ars-interactions/debug"]
ssr     = ["leptos/ssr", "ars-dom/ssr"]
hydrate = ["leptos/hydrate"]
csr     = ["leptos/csr"]

[dependencies]
ars-a11y         = { path = "../ars-a11y" }
ars-collections  = { path = "../ars-collections" }
ars-core         = { path = "../ars-core" }
ars-dom          = { path = "../ars-dom" }
ars-forms        = { path = "../ars-forms" }
ars-i18n         = { path = "../ars-i18n" }
ars-interactions = { path = "../ars-interactions" }
leptos           = { version = "0.8", default-features = false }
log              = { version = "0.4", default-features = false, optional = true }

[lints]
workspace = true
