[package]
name                   = "ars-leptos"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default = ["icu4x"]
debug   = ["dep:log", "ars-core/debug", "ars-dom/debug", "ars-interactions/debug"]
ssr     = ["leptos/ssr", "ars-dom/ssr", "ars-core/ssr", "ars-core/serde", "dep:serde", "dep:serde_json"]
hydrate = ["leptos/hydrate"]
csr     = ["leptos/csr"]
# Pre-compiled CLDR data via ICU4X. Default backend on native targets and the
# server-side rendering path. Use `--no-default-features --features csr,ars-i18n/web-intl`
# to swap icu4x for the browser-native Intl API on wasm32 builds.
icu4x = ["ars-i18n/std", "ars-i18n/icu4x"]

[dependencies]
ars-a11y         = { path = "../ars-a11y" }
ars-collections  = { path = "../ars-collections" }
ars-components   = { path = "../ars-components" }
ars-core         = { path = "../ars-core" }
ars-dom          = { path = "../ars-dom" }
ars-forms        = { path = "../ars-forms" }
ars-i18n         = { path = "../ars-i18n", default-features = false }
ars-interactions = { path = "../ars-interactions" }
leptos           = { version = "0.8", default-features = false }
log              = { version = "0.4", default-features = false, optional = true }
serde            = { version = "1", default-features = false, features = ["alloc", "derive"], optional = true }
serde_json       = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
js-sys               = "0.3"
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test    = "0.3"
web-sys              = { version = "0.3", features = ["EventInit", "KeyboardEventInit", "PointerEventInit"] }

[lints]
workspace = true
