[package]
name                   = "ars-test-harness-dioxus"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
ars-dioxus       = { path = "../ars-dioxus" }
ars-test-harness = { path = "../ars-test-harness" }

[lints]
workspace = true
