[package]
name                   = "ars-test-harness-dioxus"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[features]
default = ["icu4x"]
icu4x   = ["ars-dioxus/icu4x"]

[dependencies]
ars-core             = { path = "../ars-core" }
ars-dioxus           = { path = "../ars-dioxus", default-features = false, features = ["web"] }
ars-i18n             = { path = "../ars-i18n", default-features = false }
ars-test-harness     = { path = "../ars-test-harness" }
dioxus-web           = "0.7.6"
js-sys               = "0.3"
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test    = "0.3"
web-sys              = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }

[dependencies.dioxus]
version          = "0.7.6"
default-features = false
features         = ["macro", "signals", "hooks", "html"]

[lints]
workspace = true
